--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,5 +17,6 @@
     "editor.codeActionsOnSave": {
       "source.fixAll.spotlessGradle": true
     }
-  }
+  },
+  "java.configuration.updateBuildConfiguration": "automatic"
 }
