fix: Update submodule and fix a spacing error
We'll need to ensure that the bootstrap.sh script udpates the submodule
before it can symlink the native libraries.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "third-party/lxstudio-ide"]
 	path = third-party/lxstudio-ide
 	url = git@github.com:heronarts/lxstudio-ide
+	ignore = dirty
