--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,8 +1,9 @@
 name: Run Gradle on PRs
-on: pull_request
-    paths:
-      - '**.md'
-      - docs/**g
+on:
+  pull_request:
+    paths-ignore:
+    - '**.md'
+    - 'docs/**'
 jobs:
   gradle:
     strategy:
