feature: Enable gradle build cache
Let's be smarter and use some caching features to speed up test /
disable rerun of compilation steps.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,9 @@
 rootProject.name = 'paradisium'
+
+boolean isCiServer = System.getenv().containsKey("CI")
+
+buildCache {
+	local {
+		enabled = !isCiServer
+	}
+}
