feature: Init base effect and pattern
Use abstract Paradisium(Effect|Pattern)Base to start to provide a stable
interfact as to how to control the patterns/effects.

Also use reflections to:
- Import all effects and patterns from that extent the base class
- Instantiate all effects and patterns from the base (to ensure nothing breaks!)

--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	implementation fileTree(dir: 'third-party/lxstudio-ide/lib', include: ['**/*.jar'])
 
 	implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
+	implementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
 
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.8.2'
 	testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.8.2'
