--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,11 @@ java {
 }
 
 repositories {
-	mavenCentral()
+	// mavenCentral()
+	maven{
+		url = "http://192.168.2.23:8081/nexus/content/repositories/central/"
+		allowInsecureProtocol = true
+	}
 }
 
 dependencies {
