--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
 	id 'application'
 	id 'java'
 	id "com.github.johnrengelman.shadow" version "7.1.2"
-	id "com.diffplug.spotless" version "6.8.0"
+	// id "com.diffplug.spotless" version "6.8.0"
 }
 
 java {
@@ -53,20 +53,20 @@ application {
 
 
 
-spotless {
-	format 'misc', {
-		target '*.gradle', '*.md', '.gitignore'
-		trimTrailingWhitespace()
-		indentWithTabs()
-		endWithNewline()
-	}
+// spotless {
+// 	format 'misc', {
+// 		target '*.gradle', '*.md', '.gitignore'
+// 		trimTrailingWhitespace()
+// 		indentWithTabs()
+// 		endWithNewline()
+// 	}
 
-	groovyGradle {
-		target '*.gradle'
-		greclipse()
-	}
-	java {
-		googleJavaFormat()
-		licenseHeader '/* (C)$YEAR */'
-	}
-}
+// 	groovyGradle {
+// 		target '*.gradle'
+// 		greclipse()
+// 	}
+// 	java {
+// 		googleJavaFormat()
+// 		licenseHeader '/* (C)$YEAR */'
+// 	}
+// }
